--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "form-data": "^4.0.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
